@startuml

title __PARTICLE's Class Diagram__\n

  package engine {
    package engine.particle {
      class Particle {
          {static} - damping : float
          {static} - gravity : Vector3D
          - inverseMass : float
          + Particle()
          + update()
          + applyForce()
          + clearForce()
          + getPosition()
          + setPosition()
          + getVelocity()
          + setVelocity()
          + getAcceleration()
          + getMass()
          + getInverseMass()
          + hasFiniteMass()
      }
    }
  }
  

  package engine {
    package engine.particle {
      interface ParticleCollisionGenerator {
          {abstract} + addContact()
      }
    }
  }
  

  package engine {
    package engine.particle {
      class ParticleDrag {
          - k1 : float
          - k2 : float
          + ParticleDrag()
          + updateForce()
      }
    }
  }
  

  package engine {
    package engine.particle {
      interface ParticleForceGenerator {
          {abstract} + updateForce()
      }
    }
  }
  

  package engine {
    package engine.particle {
      class ParticleForceRegistry {
          {static} - registry : ParticleForceRegistry
          - registrations : ArrayList<ParticleForceRegistration>
          - ParticleForceRegistry()
          {static} + get()
          + add()
          + remove()
          + clear()
          + updateForces()
      }
    }
  }
  

  package engine {
    package engine.particle {
      class ParticleForceRegistration {
          + ParticleForceRegistration()
          + matches()
          + getParticle()
          + getGenerator()
      }
    }
  }
  

  package engine {
    package engine.particle {
      class ParticleGravity {
          + ParticleGravity()
          + updateForce()
      }
    }
  }
  

  package engine {
    package engine.particle {
      class ParticleWorld {
          - particles : ArrayList<Particle>
          - pcgs : ArrayList<ParticleCollisionGenerator>
          - pcs : ArrayList<ParticleCollision>
          - maxContacts : int
          - calculateIterations : boolean
          + ParticleWorld()
          + generateCollisions()
          + resetTotalForces()
          + update()
          + runPhysics()
      }
    }
  }
  

  Particle o-- Point3D : position
  Particle o-- Vector3D : velocity
  Particle o-- Vector3D : acceleration
  Particle o-- Vector3D : total_force
  ParticleDrag -up-|> ParticleForceGenerator
  ParticleForceRegistry +-down- ParticleForceRegistration
  ParticleForceRegistration o-- Particle : p
  ParticleForceRegistration o-- ParticleForceGenerator : pfg
  ParticleGravity -up-|> ParticleForceGenerator
  ParticleGravity o-- Vector3D : gravity
  ParticleWorld o-- ParticleForceRegistry : pfr
  ParticleWorld o-- CollisionHandler : ch


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
